# notcursespp

./: .ccls  .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  upstream.commit
debian/: changelog  control  copyright  libnotcurses++1.symbols  rules  watch
include/ncpp/: Cell.hh  CellStyle.hh  NCKey.hh  NotCurses.hh  PanelReel.hh  Plane.hh  Root.hh  Tablet.hh  Visual.hh
src/: CMakeLists.txt  NotCurses.cc  Plane.cc  Root.cc  config.hh.in  ncpp.cc  notcurses++.pc.in
src/demo/: CMakeLists.txt  LICENSE  boxdemo.cc  chunli.cc  demo.cc  demo.hh  eagle.cc  grid.cc  hud.cc  input.cc  luigi.cc  maxcolor.cc  outro.cc  panelreel.cc  sliding.cc  trans.cc  unicodeblocks.cc  view.cc  whiteworm.cc  witherworm.cc  xray.cc
src/input/: CMakeLists.txt  LICENSE  input.cc
src/lib/: CMakeLists.txt  NotCurses.cc  PanelReel.cc  Plane.cc  Root.cc  Tablet.cc  Visual.cc
src/planereel/: CMakeLists.txt  main.cc
src/poc/: CMakeLists.txt  rgb.cc  rgbbg.cc  unidamage.cc
src/view/: CMakeLists.txt  view.cc
